[chromium] Pepper plugins don't receive mouse movement information in non-mouse-lock mode. https://bugs.webkit.org/show_bug.cgi?id=78014

This change makes WebMouseEventBuilder pass along mouse movement
information properly.

There isn't test for this change because:
- the movement information added is only used by pepper, and there
  isn't any test for pepper at the WebKit side. (WebKit doesn't know
  about pepper.)
- this change is trivial. It just copies two newly-added data fields
  from MouseEvent to WebMouseEventBuilder during conversion.

Patch by Yuzhu Shen <yzshen@chromium.com> on 2012-02-14
Reviewed by Tony Chang.

* src/WebInputEventConversion.cpp:
(WebKit::WebMouseEventBuilder::WebMouseEventBuilder):

Canonical link: https://commits.webkit.org/95531@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107684 268f45cc-cd09-0410-ab3c-d52691b4dbfc